--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+input, textarea {
+    @apply border border-gray-300 rounded-md px-1 w-full;
+    @apply mb-2
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+input:focus, text-area:focus{
+    @apply border-blue-900
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h1 {
+    @apply text-blue-900 mb-2 text-xl
+}
+
+label {
+    @apply text-blue-900
+}
+
+.btn-primary {
+    @apply bg-blue-900 text-white px-4 py-1 rounded-md
 }
