--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,32 @@ label {
 .btn-primary {
     @apply bg-blue-900 text-white px-4 py-1 rounded-md
 }
+
+table.basic{
+    @apply w-full;
+}
+
+
+table.basic thead tr td {
+    @apply bg-blue-200
+}
+
+table.basic tr td {
+    @apply border p-1 border-gray-400
+}
+
+table.basic a{
+    @apply bg-blue-900 text-white text-sm p-1 py-1 px-2 rounded-md flex inline-flex mr-1
+}
+
+.btn-red, .btn-default {
+    @apply px-4 py-1 rounded-md
+}
+
+.btn-red {
+    @apply bg-red-800 text-white 
+}
+
+.btn-default {
+    @apply bg-gray-500 text-white
+}
