--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,13 +6,13 @@ img {
     max-height: 100%;
 }
 
-input, textarea {
+input, textarea, select {
     @apply border border-gray-300 rounded-md px-1 w-full;
     @apply mb-2
 
 }
 
-input:focus, text-area:focus{
+input:focus, text-area:focus, select:focus{
     @apply border-blue-900
 }
 
@@ -42,7 +42,7 @@ table.basic tr td {
 }
 
 table.basic a{
-    @apply bg-blue-900 text-white text-sm p-1 py-1 px-2 rounded-md flex inline-flex mr-1
+    @apply bg-blue-900 text-white text-sm p-1 py-1 px-2 rounded-md inline-flex mr-1
 }
 
 .btn-red, .btn-default {
